# tempest

./: GETTING_STARTED.md  INSTALL.md  LICENSE  MANIFEST.in  PWM_GUIDE.md  QUICK_REFERENCE.md  README.md  TRAINING_GUIDE.md  acc_pwm.txt  cbc.txt  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py  setup_and_test.sh  train_config.yaml  udi_i5.txt
backup/: test_phase4_simple.py  test_phase4_training.py  test_summary_simple.json  test_trainers.py  test_trainers_simple.py
backup/tempest/core/: models.py
backup/tempest/data/: __init__.py  simulator.py  simulator_whitelist.py
backup/tempest/training/: hybrid_trainer.py
config/: config.yaml  config_demux.yaml  config_whitelist_test.yaml  config_with_whitelists.yaml  hybrid_config.yaml
docs/: BMA_CONFIG_GUIDE.md  DOCUMENTATION_INDEX.md  ENSEMBLE_QUICK_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  MATHEMATICAL_VERIFICATION.md  SOFT_VS_HARD_CONSTRAINTS.md  TEMPEST_ARCHITECTURE.md  VISUALIZATION_GUIDE.md  WORKFLOW_DIAGRAM.md
examples/: compare_constraint_approaches.py  example_usage_simulator.py  example_whitelist_usage.py  examples.py  sample_sheet_example.csv  train_with_length_constraints.py  visualization_demo.py
tempest/: __init__.py  cli.py  cli.py.backup.py  combine.py  compare.py  config.py  demux.py  demux.py.backup.py  evaluate.py  main.py  main.py.backup.py  simulate.py  train.py  visualize.py
tempest/archive/: simulate.py.backup.py  simulator.py  visualize_predictions.py
tempest/compare/: __init__.py  evaluation_framework.py  evaluator.py
tempest/core/: __init__.py  constrained_viterbi.py  hybrid_decoder.py  hybrid_trainer.py  length_crf.py  models.py  pwm.py  pwm_probabilistic.py  trainer.py
tempest/data/: __init__ .py  __init__.py  invalid_generator.py  parallel_simulator.py  simulator.py  simulator.py.backup.py
tempest/data/archive/: simulator.py.backup.py
tempest/inference/: __init__.py  combine.py  combine.py.backup.py  combiner.py  demultiplexer.py  demux_validator.py  inference_utils.py  sample_demultiplexer.py  visualize_predictions.py
tempest/training/: __init__.py  ensemble.py  hybrid_trainer.py  trainer.py
tempest/utils/: __init__.py  check_pwm_validation_reads.py  config.py  create_fasta_index.py  io.py  logging_utils.py  prepare_transcripts.py  validate_pwm_implementation.py
tempest/visualization/: __init__.py  annotated_reads.py  tempest_visualizer.py
tests/: TEST_DOCUMENTATION.md  conftest.py  evaluate_segment_robustness.py  gpu_monitor.py  pytest.ini  requirements_test.txt  run_simulate_tests.py  run_tests.py  test_end_to_end_training.py  test_helpers.py  test_modular_integration.py  test_simulator.py  test_tempest_system.py  test_whitelist_simple.py
tests/commands/: test_evaluate.py  test_other_commands.py  test_pwm_demux_11seg.py  test_simulate.py  test_simulate_11seg.py  test_simulate_refactored.py  test_train.py  test_train_ensemble_11seg.py
tests/midflight/: ._TEST_README.md  ._test_config_ingestion.py  ._test_ensemble_bma_expanded.py  TEST_README.md  run_all_tests.py  test_config_ingestion.py  test_ensemble_bma.py  test_ensemble_bma_expanded.py  test_hybrid_training.py  test_length_constrained_crf.py  test_read_simulation_pwm_hybrid.py
tests/preflight/: ._TESTING_GUIDE.md  README_TESTS.md  TESTING_GUIDE.md  quick_check.py
whitelist/: udi_i7.txt
